# AutomateSH

./: .env.example  .gitignore  Dockerfile  README.md  automateSH-Plan.md  cli.py  connect_and_publish.py  docker-compose.yml  generate_templates.py  get_tiktok_link.py  pyproject.toml  scheduler.py  test_composio.py  test_publish.py  topics.txt  update_tiktok_credentials.py
app/: config.py  logger.py
audio/: __init__.py  tts.py
database/: __init__.py  connection.py  models.py
engine/: __init__.py  graph.py  nodes.py  state.py
newsletter/: agent.py
output/: 2026-06-07-testing-this-app-recording_notes.md  2026-06-07-testing-this-app-thumbnail.txt  2026-06-07-testing-this-app-voice.txt  2026-06-07-testing-this-app.md  2026-06-08-how-linear-achieves-blazing-speed-the-technical-secrets-recording_notes.md  2026-06-08-how-linear-achieves-blazing-speed-the-technical-secrets-thumbnail.txt  2026-06-08-how-linear-achieves-blazing-speed-the-technical-secrets-voice.txt  2026-06-08-how-linear-achieves-blazing-speed-the-technical-secrets.md  2026-06-08-my-first-automation-test-recording_notes.md  2026-06-08-my-first-automation-test-thumbnail.txt  2026-06-08-my-first-automation-test-voice.txt  2026-06-08-my-first-automation-test.md  newsletter-2026-06-08.md
products/: github_actions.py
prompts/: code.md  description.md  hashtags.md  quality_review.md  research.md  script.md  thumbnail.md  title.md  trend_agent.md
providers/: __init__.py  base.py  factory.py  ollama.py  opencode.py
social/: tiktok.py
tests/: conftest.py  test_audio.py  test_pipeline.py  test_providers.py  test_trends.py  test_video.py
(+34 files in other folders)
